--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,22 +1,145 @@
 .video {
     width: 100%;
     filter: contrast(130%) grayscale(50%);
-    height: 100%;
+
     object-fit: cover;
     box-sizing: border-box;
     z-index: 0;
+    min-height: 456px;
+    max-height: 792px;
+}
+.video-wrapper {
+    position: relative;
+}
+.video-wrapper::after {
+    content: "";
+    display: block;
+
+    background: linear-gradient(
+        179.71deg,
+        rgba(0, 0, 0, 0) 89.46%,
+        #000000 100%
+    );
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 .logo {
     position: absolute;
     z-index: 1;
     left: 50%;
-    top: 10%;
+    top: 60px;
     transform: translateX(-50%);
     max-width: 80%;
 }
 .home {
-    overflow: hidden;
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    min-height: 100%;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    max-width: 576px;
+    margin: 0 auto;
+    color: rgba(255, 255, 255, 0.5);
+    padding: 0 16px;
+}
+
+.header {
+    font-size: 32px;
+    line-height: 48px;
+    color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+}
+.h1 {
+    font-size: 32px;
+    line-height: 48px;
+    margin: 0;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    margin: 16px auto 48px;
+    width: max-content;
+}
+
+@media (min-width: 600px) {
+    .form {
+        flex-direction: row;
+    }
+}
+
+.input {
+    border: 1px solid rgba(255, 255, 255, 0.08);
+    background-color: rgba(255, 255, 255, 0.04);
+    line-height: 48px;
+
+    height: 60px;
+    padding: 6px 16px;
+    border-bottom-width: 0;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 0;
+    color: white;
+    font-size: 24px;
+    outline: none;
+    box-shadow: none;
+    transition: 300ms ease;
+    text-align: center;
+}
+@media (min-width: 600px) {
+    .input {
+        border-right-width: 0;
+        border-bottom-width: 1px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        text-align: left;
+        min-width: 350px;
+    }
+}
+.input:focus {
+    outline: none;
+    box-shadow: none;
+    background-color: rgba(255, 255, 255, 0.08);
+    transition: 300ms ease;
+}
+.button {
+    padding: 6px 32px;
+    background-color: #942e39;
+    font-weight: bold;
+    border: none;
+    color: white;
+    line-height: 48px;
+    height: 60px;
+    font-size: 24px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 8px;
+    cursor: pointer;
+    transition: 300ms ease;
+}
+.button:hover {
+    outline: none;
+    box-shadow: none;
+    background-color: #a63446;
+    transition: 300ms ease;
+}
+
+@media (min-width: 600px) {
+    .button {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
 }
