--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,12 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap");
 html,
 body {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
     background: #000000;
-    font-family: "Helvetica Neue", arial, sans-serif;
+    font-family: "Montserrat", arial, sans-serif;
     font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
     color: #fff;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -17,5 +20,5 @@ body {
 }
 
 #app {
-    height: 100%;
+    min-height: 100%;
 }
