--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     z-index: 0;
     min-height: 456px;
-    max-height: 792px;
+    max-height: 592px;
 }
 .video-wrapper {
     position: relative;
@@ -32,17 +32,19 @@
     top: 60px;
     transform: translateX(-50%);
     max-width: 80%;
+    max-height: 250px;
 }
 .home {
     width: 100%;
     min-height: 100%;
+    padding-bottom: 4rem;
 }
 .content {
     display: flex;
     flex-direction: column;
     max-width: 576px;
     margin: 0 auto;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.75);
     padding: 0 16px;
 }
 
@@ -51,6 +53,8 @@
     line-height: 48px;
     color: rgba(255, 255, 255, 0.5);
     text-align: center;
+    margin: 0;
+    font-weight: normal;
 }
 .h1 {
     font-size: 32px;
@@ -60,11 +64,13 @@
     text-align: center;
     color: white;
 }
+
 .form {
     display: flex;
     flex-direction: column;
     margin: 16px auto 48px;
     width: max-content;
+    max-width: 100%;
 }
 
 @media (min-width: 600px) {
@@ -118,7 +124,7 @@
     color: white;
     line-height: 48px;
     height: 60px;
-    font-size: 24px;
+    font-size: 20px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 8px;
     border-top-right-radius: 0;
@@ -140,4 +146,18 @@
         border-top-right-radius: 8px;
         border-bottom-right-radius: 8px;
     }
+}
+
+.accent-block {
+    background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0),
+        rgba(255, 255, 255, 0.08)
+    );
+    margin-bottom: 2rem;
+}
+
+.signature {
+    display: flex;
+    align-items: center;
 }
