--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     margin: 0;
     background: #000000;
-    font-family: "Montserrat", arial, sans-serif;
+    font-family: "Noto Sans", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -20,4 +20,9 @@ body {
 
 #app {
     min-height: 100%;
+}
+
+h1,
+h2 {
+    font-family: "Noto Serif", serif;
 }
