--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -4,10 +4,15 @@
     object-position: 0% 100%;
     box-sizing: border-box;
     z-index: 0;
-    height: 456px;
+    height: 100%;
 }
 .video-wrapper {
-    position: relative;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    left: 0;
+    width: 100%;
+    height: 90vh;
 }
 .video-wrapper::after {
     content: "";
@@ -24,26 +29,19 @@
     left: 0;
 }
 
-.logo {
-    position: absolute;
-    z-index: 1;
-    left: 50%;
-    top: 60px;
-    transform: translateX(-50%);
-    max-width: 80%;
-    max-height: 250px;
-}
 .home {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     padding-bottom: 4rem;
+    position: relative;
+    z-index: 2;
 }
 .content {
     display: flex;
     flex-direction: column;
     max-width: 576px;
     margin: 0 auto;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 0.72);
     padding: 0 16px;
 }
 
@@ -156,11 +154,8 @@
 }
 
 .accent-block {
-    background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0),
-        rgba(255, 255, 255, 0.08)
-    );
+    padding-top: 40vh;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
     margin-bottom: 2rem;
 }
 
