--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,28 +1,44 @@
 html,
 body {
-    min-height: 100%;
+    min-height: 100vh;
     width: 100%;
     padding: 0;
     margin: 0;
-    background: #000000;
+
     font-family: "Noto Sans", sans-serif;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.5;
-    color: #fff;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.64);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    background: #060708;
 }
 
 * {
     box-sizing: border-box;
 }
 
-#app {
-    min-height: 100%;
+h1 {
+    padding: 0 24px;
+    font-family: "Noto Serif", serif;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    color: rgba(255, 255, 255, 0.9);
+    text-align: center;
 }
 
-h1,
 h2 {
+    margin: 12px 0;
     font-family: "Noto Serif", serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.9);
+    text-align: left;
 }
